<resources>
    <string name="app_name">My Application</string>
    <string name="button_height">50dp</string>
    <string name="button_width">50dp</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>
    <string name="num_plus">+</string>
    <string name="num_minus">-</string>
    <string name="num_sign">*</string>
    <string name="num_division">/</string>
    <string name="num_equal">=</string>
    <string name="clear">清屏</string>
</resources>
